Actions
Bug #14335
closednscd: this 'if' clause does not guard...
Start date:
Due date:
% Done:
100%
Estimated time:
Difficulty:
Bite-size
Tags:
Gerrit CR:
Description
Build error with gcc 11:
nscd_config.c: In function '_nscd_cfg_str_to_data': nscd_config.c:2359:17: error: this 'if' clause does not guard... [-Werror=misleading-indentation] 2359 | if (errorp != NULL) | ^~ In file included from nscd_cfgdef.h:36, from nscd_config.c:36: nscd_log.h:82:33: note: ...this statement, but the latter is misleadingly indented as if it were guarded by the 'if' 82 | #define _NSCD_LOG(comp, lvl) if ((_nscd_log_comp & (comp)) && \ | ^~ nscd_config.c:2363:25: note: in expansion of macro '_NSCD_LOG' 2363 | _NSCD_LOG(NSCD_LOG_CONFIG, NSCD_LOG_LEVEL_ERROR) | ^~~~~~~~~ cc1: all warnings being treated as errors
Updated by Electric Monk 7 months ago
- Status changed from In Progress to Closed
- % Done changed from 90 to 100
git commit 5608cf052f6eabe370f15f49b6fa5d0d8be732af
commit 5608cf052f6eabe370f15f49b6fa5d0d8be732af Author: Toomas Soome <tsoome@me.com> Date: 2022-01-10T08:42:53.000Z 14335 nscd: this 'if' clause does not guard... Reviewed by: Andrew Stormont <andyjstormont@gmail.com> Reviewed by: C Fraire <cfraire@me.com> Approved by: Dan McDonald <danmcd@joyent.com>
Actions