14335 nscd: this 'if' clause does not guard... Reviewed by: Andrew Stormont <andyjstormont@gmail.com> Reviewed by: C Fraire <cfraire@me.com> Approved by: Dan McDonald <danmcd@joyent.com>